kubernetes/devtest-configs/taskserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskserver
  namespace: feedreader-devtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskserver
  template:
    metadata:
      labels:
        app: taskserver
    spec:
      imagePullSecrets:
      - name: xyb-private-docker-registry
      containers:
      - name: taskserver
        image: docker.xyb.name/feedreader-devtest/taskserver:latest
        imagePullPolicy: Always
