kubernetes/devtest-configs/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  namespace: feedreader-devtest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      imagePullSecrets:
      - name: xyb-private-docker-registry
      containers:
      - name: webserver
        image: docker.xyb.name/feedreader-devtest/webserver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: feedreader-devtest
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: webserver
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
  namespace: feedreader-devtest
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - api.devtest.feedreader.org
    secretName: webserver-https-secret
  rules:
  - host: api.devtest.feedreader.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 80
